# minimacore

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py  rastrigin_plot_analysis.py
.github/workflows/: coverage.yml  lint-and-format.yml  tests.yml
ci/: coverage.sh
cmake/: fetchDependencies.cmake  projectVersion.cmake
cmake/modules/: ClangFormat.cmake  ClangTidy.cmake  CodeCoverage.cmake
examples/: CMakeLists.txt
examples/benchmark_functions/: CMakeLists.txt
examples/benchmark_functions/rastrigin/: CMakeLists.txt  evolution_plot.py  rastrigin.cpp  rastrigin.md  rastrigin_plot_analysis.py
examples/benchmark_functions/rastrigin/src/: rastrigin.cpp
resources/: algorithms_organogram_planuml.txt  minimacore-code-style.xml
src/: CMakeLists.txt  minimacore_concepts.h
src/stochastic/: CMakeLists.txt
src/stochastic/genetic_algorithm/: CMakeLists.txt  base_evaluation.h  base_individual.h  base_individual_generator.h  evolution_statistics.h  genetic_algorithm_base.h  genetic_operators.h  runner.h  selection_operators.h  setup.h  termination_condition.h
src/utils/: CMakeLists.txt  logger.cpp  logger.h  thread_pool.h
tests/: .clang-tidy  CMakeLists.txt
tests/src/: base_tests.cpp  base_tests.h  benchmark_function_tests.cpp  genetic_algorithm_tests.cpp  test_functions.h  utils_tests.cpp
