set(UTILS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/logger.cpp)
if (BUILD_SHARED_LIBS)
    add_library(minimacore_utils SHARED ${UTILS_SRC})
else ()
    add_library(minimacore_utils STATIC ${UTILS_SRC})
endif ()
add_library(minimacore::utils ALIAS minimacore_utils)
target_include_directories(minimacore_utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_clang_format_for(minimacore_utils ${UTILS_SRC})
add_clang_tidy_for(minimacore_utils ${UTILS_SRC})
